2002-10-01  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (rsvg_parse_style_args): handle dashoffset and dasharray
	(state_finalize): support dashes
	(state_clone): ditto
	(render_bpath): ditto
	
	* TODO: update to reflect work done
	
2002-10-01  Dom Lachowicz <doml@appligent.com>

	* TODO: update

	* rsvg.c (): lay some framework for stroke-dash parameters
	
2002-10-01  jacob berkman  <jacob@ximian.com>

	* rsvg-css.c (rsvg_css_parse_normalized_length): fix to build with
	a C compiler

2002-10-01  Dom Lachowicz <doml@appligent.com>

	* rsvg-css.c (rsvg_css_parse_color): Handle all 146 of svg's named colors. Please someone check this for correctness
	
2002-10-01  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (gradient_stop): Handle % gradient stop offsets
	
2002-10-01  Dom Lachowicz <doml@appligent.com>

	* rsvg-css.c (rsvg_css_parse_length): handle %, em units now. ex can easily be handled once we have a way to get the font's XHeight
	(rsvg_css_parse_normalized_length): updated for above ^^^
	
	* rsvg.c (rsvg_handle_set_dpi): new function for setting the DPI
	(macro) RSVG_DPI: assume default of 90 DPI instead of 72
	(rsvg_viewport_percentage): new fn for calculating percentages relative to viewports
	(*): update to use new CSS length routines
	(rsvg_start_text): handle -x and -y values for text offsets
	
2002-10-01  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (*): Make drawing functions handle % widths, heights too
	Use parse_normalized_length for font sizes as well
	
	* rsvg-css.[ch] (rsvg_css_parse_fontsize): kill function
	
2002-09-29  Larry Ewing  <lewing@ximian.com>

	* rsvg.c (rsvg_start_ellipse): correct the ellipse rendering
	coordinates.

=== librsvg 2.1.0 ===
	
2002-09-27  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Add some news about 2.1.0

2002-09-27  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Bump version to 2.1.0

2002-09-25  jacob berkman  <jacob@ximian.com>

	* gtk-engine/Makefile.am: add $(top_srcdir) to $INCLUDES, remove